test/invalid/InvalidDollarSymbol/InvalidDollarSymbol.plume
/**
 * @author Robin Burgess 36815
 */
 class NoDollarSigns extends Object is
	field i:Integer
	method $ : () -> Integer is
		i+1